# first_project

./: .gitignore  CMakeLists.txt  README.md  bwt.cpp  bwt.h  lz77.cpp  lz77.h  main.cpp  mtf.cpp  mtf.h  rle.cpp  rle.h  rowGenerator.cpp  rowGenerator.h  test.cpp  test.h  treap.cpp  treap.h
data/: output.txt
data/input/: data.txt  text.txt
src/: CMakeLists.txt  bwt.cpp  bwt.h  directives.h  haffman.cpp  haffman.h  lz77.cpp  lz77.h  main.cpp  mtf.cpp  mtf.h  myalgoritm.cpp  myalgoritm.h  rle.cpp  rle.h  test.cpp  test.h  zip.cpp  zip.h
